fixed alignment on home icon

--- a/base.css
+++ b/base.css
@@ -10,7 +10,6 @@
     background-repeat: no-repeat;
     background-size: cover !important;
     padding-bottom: 30px !important;
-    margin-left: -3px;
 }
 
 /* unread indicator */
